# SimWorld

./: .gitignore  README.md
.github/workflows/: release.yml
simworld/: .env.example  DEPLOY.md  MIROFISH_API.md  docker-compose.yml
simworld/backend/: .dockerignore  fly.toml  requirements.txt
simworld/backend/app/: __init__.py  config.py  main.py
simworld/backend/app/api/: auth.py  billing.py  health.py  network.py  simulations.py
simworld/backend/app/models/: schemas.py
simworld/backend/app/services/: llm_simulation.py  mirofish_client.py  mock_adapter.py  mock_mirofish.py  mock_network.py  orchestrator.py  pdf_export.py  simulation_parser.py
simworld/backend/app/utils/: auth.py  supabase.py
simworld/backend/migrations/: 001_credits.sql
simworld/backend/scripts/: setup_stripe.py  setup_supabase.py
simworld/frontend/: build-desktop.ps1  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
simworld/frontend/src-tauri/: Cargo.toml  tauri.conf.json
simworld/frontend/src-tauri/capabilities/: default.json
simworld/frontend/src-tauri/icons/: icon.icns
simworld/frontend/src-tauri/src/: lib.rs  main.rs
simworld/frontend/src/app/: globals.css  layout.tsx  page.tsx  warm-client.tsx
simworld/frontend/src/app/(dashboard)/: layout.tsx
simworld/frontend/src/components/network/: AgentDetailPanel.tsx  ClusterLabels.tsx  (+3 more)
simworld/frontend/src/lib/: mock-network-data.ts  real-network-data.ts  utils.ts
simworld/frontend/src/types/: tauri.d.ts
simworld/website/: index.html  netlify.toml  og-image.html  privacy.html  terms.html
(+18 files in other folders)
