[package]
name = "simworld"
version = "0.1.0"
description = "SimWorld — AI-powered scenario simulation"
authors = ["SimWorld"]
edition = "2021"

[lib]
name = "simworld_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
